apps/bee/outline/base/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline
  namespace: outline
spec:
  parentRefs:
    - name: bee-gateway
      namespace: gateways
      sectionName: xtinto.com-https
  hostnames:
    - outline.xtinto.com
  rules:
    - backendRefs:
        - name: outline
          port: 3000
